# healthfutures-evagg

./: .eslintignore  .flake8  .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SETUP.md  blah.txt  environment.yml  papers.xml  papers_set.txt  papers_tp53.xml  poetry.toml  proxy-config.yaml  pyproject.toml  run_aoai_proxy.sh  template.env  test_fetch_parse_xml_response_output.txt  what.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-check.yml
data/: Manual_Ground_Truth_find_right_papers.csv  README.md  gencc_clingen_submit_date.tsv  gencc_pub_date.csv  truth_set_content_manual.tsv  truth_set_small.tsv  truth_set_tiny.tsv
data/archive/: truth_set_small.tsv  truth_set_tiny.tsv
data/discrepancy_resolution/: ana1_discrepancy_resolution.10.23.24.xlsx  ana1_discrepancy_resolution.csv  ana1_discrepancy_resolution.xlsx  ana2_discrepancy_resolution.csv  ana2_discrepancy_resolution_completed_24Oct2024.xlsx  ana3_discrepancy_resolution.csv  ana3_discrepancy_resolution.xlsx
data/error_analysis/: all_sorted_discrepancies.tsv  parsed_ana1_error_analysis_worksheet.tsv  parsed_ana2_error_analysis_worksheet.tsv  parsed_ana3_error_analysis_worksheet.tsv  resolved_discrepancies.tsv
data/kg/: bench1.tsv
data/sample/: 34758253.json
data/user_study/: Evidence_Aggregator_User_Acceptance_Study_Day_1_Session_Data(1_8).csv  Evidence_Aggregator_User_Acceptance_Study_Day_2_Session_Data(1_8).csv  P1_S1_GA_actions.csv  P1_S2_GB_actions.csv  P2_S1_GB_actions.csv  P2_S2_GA_actions.csv  P3_S1_GA_actions.csv  P3_S2_GB_actions.csv  P4_S1_GB_actions.csv  P4_S2_GA_actions.csv  P5_S1_GB_actions.csv  P5_S2_GA_actions.csv  P6_S1_GA_actions.csv  P6_S2_GB_actions.csv  P7_S1_GB_actions.csv  P7_S2_GA_actions.csv  P8_S1_GA_actions.csv  P8_S2_GB_actions.csv  README.txt
data/v1/: evidence_test_v1.tsv  evidence_train_demo.tsv  evidence_train_v1.tsv  group_assignments.tsv  papers_test_v1.tsv  papers_train_v1.tsv  review_status_observation_train_v1.tsv  train_set_genes_pmids_titles_abstracts.json  train_set_genes_pmids_titles_abstracts.pkl
data/v1.1/: README.md  evidence_test_v1.1.tsv  evidence_train_v1.1.tsv  new_observations_raw.tsv  papers_test_v1.1.tsv  papers_train_v1.1.tsv
deploy/: .gitignore  README.md  aoai.tf  config.auto.tfvars.json  database.tf  main.tf  output.tf  provider.tf  storage.tf  terraform.tfvars.json  variables.tf
docs/: README.md  SEMANTIC_KERNEL.md
lib/: __init__.py  di.py  execute.py
lib/config/: __init__.py  _pydantic.py  benchmark_content.yaml  benchmark_observation.yaml  benchmark_paper_finding.yaml  benchmark_queries.yaml  benchmark_queries_moderate.yaml  benchmark_queries_no_gene_disease_rel.yaml  benchmark_queries_representative_gene_subset.yaml  content_benchmark.yaml  content_demo.yaml  evagg_clingen_pmids.yaml  evagg_full_pipeline.yaml  evagg_paper_list.yaml  (+23 more)
mcp/: README.md
mcp/pubtator-mcp/: README.md  example_client.py  gnorm2_fixes.patch  mcp_config.json  pyproject.toml
mcp/pubtator-mcp/pubtator_mcp/: __init__.py  models.py  pubtator_mcp_server.py  pubtator_update_indices.py
notebooks/: README.md  assess_manual_truth_set_v1.py  collect_few_shot_examples.py  collect_neg_pos_papers.py  content_benchmark.py  copilot_squared.sh  copilot_squared_assistant.py  gencc_truth_set.ipynb  generate_manual_truth_set_v1.py  generate_small_truth_set.py  llm_prompt_assistant.py  paper_finding_benchmarks.ipynb  paper_finding_benchmarks.py  paper_finding_benchmarks_skipped_pmids.txt  paper_finding_prompt_assistant.sh  post_process_pipeline_output.py
scripts/: README.md  __init.py__  check_output_ids.py  check_paper_status.py  count_abstract_pmids.py  exec_sem_function.py  get_paper_counts.py  preprocess_v1_reasoning_tsv.py
test/: README.md  conftest.py  make_local_library.py
(+427 files in other folders)
