# Poetry is used on top of conda in order to install the local library.
# All package dependencies should be managed by conda.
[tool.poetry]
name = "lib"
version = "0.0.0" # This is unused.
description = "local repo library"
authors = ["Microsoft Biomedical Computing Group <BiomedComp@microsoft.com>"]

[tool.poetry.scripts]
run_single_query_sync = "lib.scripts.run_single_query_sync:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
