# Poetry is used on top of conda in order to install the local library.
# All package dependencies should be managed by conda.
[tool.poetry]
name = "lib"
version = "0.0.0" # This is unused.
description = "local repo library"
authors = ["Microsoft Biomedical Computing Group <BiomedComp@microsoft.com>"]

[tool.poetry.scripts]
run_evagg_app = "lib.execute:run_evagg_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Flake8 does not support configuration in this file, so it's configured in .flake8

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"

# Asserts are OK.
[tool.bandit]
skips = ['B101']

[tool.coverage.run]
omit = [
    "test/*",
    "lib/scripts/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
